--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "npx-ts-test",
   "version": "1.0.0",
   "main": "src/main.ts",
+  "bin":{
+    "npx-ts-test": "src/main.ts"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   }
