--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "npx-ts-test",
   "version": "1.0.0",
-  "main": "src/main.ts",
-  "bin":{
-    "npx-ts-test": "src/main.ts"
+  "main": "src/main.js",
+  "bin": {
+    "npx-ts-test": "src/main.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
