--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "npx-ts-test",
   "version": "1.0.0",
-  "main": "src/main.js",
+  "main": "main.js",
   "bin": {
-    "npx-ts-test": "src/main.js"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "npx-ts-test": "main.js"
   }
 }
