--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "npx-ts-test",
   "version": "1.0.0",
-  "main": "main.js",
+  "main": "main.ts",
   "bin": {
-    "npx-ts-test": "main.js"
+    "npx-ts-test": "main.ts"
   }
 }
