--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
   "name": "npx-ts-test",
   "version": "1.0.0",
-  "main": "main.ts",
+  "main": "dist/main.js",
+  "types": "dist/main.d.js",
   "bin": {
-    "npx-ts-test": "main.ts"
+    "npx-ts-test": "main.js"
+  },
+  "scripts": {
+    "dev": "ts-node src/main.ts",
+    "watch": "tsc --watch",
+    "start": "node build/main.js",
+    "build": "tsc"
+  },
+  "devDependencies": {
+    "typescript": "^5.9.3"
   }
 }
