--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "build": "tsc"
   },
   "devDependencies": {
+    "@types/node": "^24.6.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
 }
